--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: antiquewhite;
+  background-color: #faebd7;
 }
 
 header {
@@ -13,9 +13,71 @@ header {
   line-height: 0px;
   background-color: black;
   color: rgb(218, 68, 113);
-  text-align: center;
+  /* text-align: center; */
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+
+
+.dropbtn {
+  float:right;  
+  background-color: #ec5b12;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  padding-right: 60px;
+  float: right;
+  position: relative;
+  /* display: inline-block; */
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+/* </style> */
+
+/* <div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+Right-aligned Dro */
 
 header img {
   margin-top: 20px;
@@ -30,7 +92,3 @@ img {
   margin-right: 2px;
 }
 
-/* #img1 {
-  height: 200px;
-  width: 70px;
-} */
